bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_on_unit_struct.rs
use macbat::Event;
#[derive(Event)]
#[batpak(category = 1, type_id = 1)]
struct E;
fn main() {}
